tests/integration/pilot/test_artifacts/pilot-f119641b99704107b0cfca0c6/TestTraffic/virtualservice/set_header/a/to_b/_test_context/VirtualService.3647397607.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-60257
spec:
  hosts:
  - b
  http:
  - headers:
      request:
        set:
          x-custom: some-value
    route:
    - destination:
        host: b
